<resources>
    <string name="app_name">Fitman</string>
    <string name="login_title">Login</string>
    <string name="skip">skip</string>
    <string name="lang_en">English</string>
    <string name="lang_zh_CN">Simplified Chinese(简体中文)</string>
    <string name="lang_zh_TW">Traditional Chinese(繁体中文)</string>
    <string name="version">Version 1.0</string>
    <string name="back">Back</string>
    <string name="developer">Developer\nGao Jiaxiang\nSWE1909468</string>
    <string name="title_home">Home</string>
    <string name="title_sport">Sports</string>
    <string name="title_fitness">Fitness</string>
    <string name="title_daily_attendance">Attendance</string>
    <string name="title_my">My</string>
    <string name="title_activity_navigation_bottom" translatable="false">NavigationBottomActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile_photo">Profile photo</string>
    <string name="my_data">My Data</string>
    <string name="username_unlogin">Hello, User!\nPlease Click Here to Log in First!</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="sex">Sex</string>
    <string name="feedback">Feedback</string>
    <string name="check_for_update">Check for Update</string>
    <string name="about">About</string>
    <string name="searching_update">Searching for new version…</string>
    <string name="no_update">The current APP is the latest version. </string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up_for_fitman"><u>Sign up for Fitman</u></string>
    <string name="login_fail">Login failed, please check your user name or password!</string>
    <string name="username_empty">Please fill in the username</string>
    <string name="password_empty">Please fill in the password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_confirm_empty">Please fill in the password confirmation</string>
    <string name="password_not_equal">The password and the confirmation password are not the same</string>
    <string name="username_exist">The username already exists</string>
    <string name="sign_up_success">Sign up success!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="e_mail">E-mail</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="birthday">Birthday</string>
    <string name="year_slash" translatable="false">/</string>
    <string name="month_slash" translatable="false">/</string>
    <string name="submit">submit</string>
    <string name="cancel">cancel</string>
    <string name="log_out">Log out</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="verification_code">Code</string>
    <string name="send">Send</string>
    <string name="verification_code_empty">Please fill in the verification code</string>
    <string name="new_password_empty">Please fill in the new password</string>
    <string name="confirm_new_password_empty">Please fill in the confirmation password</string>
    <string name="new_password_not_equal">The new password and the confirmation password are not the same</string>
    <string name="reset_password_success">Reset password success!</string>
    <string name="reset_password_fail">Reset password failed!</string>
    <string name="verification_code_error">Verification code error!</string>
    <string name="verification_code_send_fail">Verification code send failed!</string>
    <string name="verification_code_sent">Code has sent</string>
    <string name="verification_code_send_toast">Your verification code is: </string>
    <string name="username_not_exist">The username does not exist</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="today">Today</string>
    <string name="attendance_string_1">You have signed in for </string>
    <string name="attendance_string_2"> days this month</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sign_in_today">Sign in Today</string>
    <string name="already_signin">You have signed in today</string>
    <string name="sign_in_fail">Sign in failed</string>
    <string name="sign_in_success">Sign in successfully</string>
    <string name="attendance_already_exist">Attendance is already in the database</string>
    <string name="not_login">You are not logged in, please login first</string>
    <string name="steps">Steps</string>
    <string name="step">Step</string>
    <string name="kg">Kg</string>
    <string name="cm">cm</string>
    <string name="not_sign_in">You haven\'t signed in today</string>
    <string name="km">km</string>
    <string name="duration">Duration</string>
    <string name="pace">Pace</string>
    <string name="calorie">Calorie</string>
    <string name="start_running">Start Running</string>
    <string name="firstname_empty">Please fill in the first name.</string>
    <string name="lastname_empty">Please fill in the last name.</string>
    <string name="phone_empty">Please fill in the phone.</string>
    <string name="email_empty">Please fill in the e-mail.</string>
    <string name="gender_empty">Please fill in the gender.</string>
    <string name="bmi">BMI</string>
    <string name="attendance_times_this_month">Attendance times this month</string>
    <string name="today_s_steps">Today\'s steps</string>
    <string name="fill_in_profile_first">Please fill in the profile first!</string>
    <string name="category">Category</string>
    <string name="functional_issue">Functional Issue</string>
    <string name="comment_or_suggestion">Comment or Suggestion</string>
    <string name="description">Description</string>
    <string name="contact_information">Contact Information</string>
    <string name="phone_number_or_email_address">Phone Number or Email Address</string>
    <string name="not_fill_all">Please fill in all the fields</string>
    <string name="feedback_success">We have received your feedback and thank you for your submission!</string>
    <string name="permission_not_all">The app does not have all permissions!</string>
    <string name="last_running_record">Last Running Record</string>
    <string name="fitness_title_1">10 MIN AB WORKOUT</string>
    <string name="fitness_title_2">10 MIN BEGINNER AB WORKOUT</string>
    <string name="fitness_title_3">10 MIN SIXPACK WORKOUT</string>
    <string name="fitness_title_4">20 MIN FULL BODY WORKOUT</string>
    <string name="fitness_title_5">10 MIN BOOTY BURN</string>
    <string name="min">min</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="fitness_description_1">inspired by my most popular \'Sixpack Workout\' - the NEW VERSION! // Werbung \n\nWhenever I meet people who workout with my videos and ask them which one they like most they ALWAYS say: \'your Sixpack Workout!\'.\nAfter 1.5 years it might be time for a new one then haha!\n\nMY OPINION: burns even more, makes me sweat more and gives me such a good feeling in my abs! Maybe it\'s also because I\'m not as \'used\' to this exercise combination yet. In any way: you should definitely give it a try :)\n\n▸ Would love to hear which one you prefer - the old or the new one?\n\n__\n\nNo Equipment necessary, no breaks (you\'re used to it by now I guess) and not much space needed :) If you need a break tho - take it! Just don\'t quit!\n\nThe video is in full length which means you can just follow whatever I’m doing 30s for each exercise.\n\nI recommend switching up your workouts to give your muscles enough time to recover and to hit them from different angles. If you want to challenge your muscles in another way: check out my Good Morning Workout, 20min Booty Workout, Sexy Arm Trainings or the Calorie Burn Session!</string>
    <string name="fitness_description_2"><![CDATA[Ohhhh yes - a BEGINNER ab workout! ♥︎ / Werbung \n\nIf you have a hard time keeping up with my super intense \'10min Ab Workout\' and \'10min Sixpack Workout\'... THIS ONE IS FOR YOU :)\n\nEverybody starts somewhere and my other workouts require suuuper strong core muscles. That\'s why I really wanted to create an ab workout, that is suitable for beginners - while still being super effective.\n\nAnd listen.. it even includes BREAKS! :D\n\n(If you feel like it\'s too easy with the breaks though: just continue the last exercise during the break & jump into the new movement one once I start with it as well)\n\nMy mom tried this workout and said, that it\'s 100% manageable for her .. although she usually isn\'t so much into working out. That means: no excuses for you. GIVE IT A TRY ♥︎\n\n__\n\nNo Equipment necessary and not much space needed :) The video is in full length which means you can just follow whatever I’m doing 30s for each exercise. There is a small break included and you can have a look at what exercise is up next.\n\nI recommend switching up your workouts to give your muscles enough time to recover and to hit them from different angles.\nI have more workouts that are suitable for beginners! Check out my\n- 20min Full Body Workout,\n- Good Morning Workout,\n- 10min Cool Down Routine or my\n- 10min Sexy Arm Workout\n\n\n__]]></string>
    <string name="fitness_description_3"><![CDATA[NO EXCUSES ♥︎ a quick & intense workout to target your abs. You don\'t need any equipment or weights!! // Werbung \n\nThe video is in full length which means you can just follow whatever I’m doing 30s for each exercise – NO REST IN BETWEEN.\n\nNo Equipment necessary, no breaks and not much space needed :) If you need a break tho - take it! Just don\'t quit! \n__]]></string>
    <string name="fitness_description_4"><![CDATA[NO EXCUSES ♥︎ a Full Body Workout that can do whenever and wherever you like. // Werbung \n\nYou don\'t need any equipment or weights!! Targets the muscles of your whole body and gives you a QUICK SWEAT! \n\nThe video is in full length which means you can just follow whatever I’m doing 30s for each exercise. \nThere are two 1min rests in between. If you need to pause longer - feel free to do so. If you don\'t need a break - skip them! \n\nI recommend switching up your workouts to give your muscles enough time to recover. You can do this workout 2-3x a week and if you want to do be active on the other days: check out my Sixpack, Core & Booty Workout ♥︎\n\n__]]></string>
    <string name="fitness_description_5"><![CDATA[A quick & intense workout to target your butt. You don\'t need any equipment or weights!! // Werbung \n\nI usually train my legs in the gym but I love to do this whenever I\'m traveling or don\'t have time to do a full leg day with weights ♥︎\n\nThe video is in full length which means you can just follow whatever I’m doing! 30s for each exercise. \n\n__]]></string>
    <string name="sensornotavailable">Step Sensor is not available. Step function cannot be used.</string>
    <string name="we_can_help_you_achieve_it">We can help you achieve it!</string>
    <string name="do_you_want_to_get_active_in_a_health_way">Do you want to get active in a health way?</string>
    <string name="get_start">Get Start!</string>

</resources>