<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.fitman.RoundPicture
        android:id="@+id/logo_login"
        android:layout_width="100.0dip"
        android:layout_height="100.0dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintVertical_bias="0.2" />
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/logo_login"
        app:layout_constraintStart_toStartOf="@id/logo_login"
        app:layout_constraintEnd_toEndOf="@id/logo_login"
        app:layout_constraintBottom_toBottomOf="@id/logo_login"
        android:textColor="@color/orange"
        android:fontFamily="@font/logo_font"
        android:textSize="60sp"
        android:visibility="invisible"
        android:text="@string/login_title"/>
    <!--TODO logo转头像旋转Welcome -->

    <EditText
        android:id="@+id/et_username"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/username_hint"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.1"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password_hint"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:onClick="login"
        android:text="@string/login_title" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintEnd_toStartOf="@+id/tv_dot"
        android:text="@string/forgot_password"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tv_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="  ·  "/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toEndOf="@id/tv_dot"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up_for_fitman"/>

</androidx.constraintlayout.widget.ConstraintLayout>