<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/setting_item_selector"
                android:paddingTop="20dp"
                android:paddingBottom="30dp">

                <com.fitman.RoundPicture
                    android:id="@+id/head"
                    android:layout_width="100.0dip"
                    android:layout_height="100.0dip"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/defaultprofilephoto" />

                <TextView
                    android:id="@+id/tvname"
                    style="@style/TxtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/head"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingTop="10dp"
                    android:text="@string/username"
                    android:gravity="center"
                    android:visibility="visible"
                    android:textSize="20.0sp" />

                <TextView
                    android:id="@+id/tvname_unlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/head"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingTop="10dp"
                    android:text="@string/username_unlogin"
                    android:gravity="center"
                    android:visibility="gone"
                    android:textSize="18.0sp" />

                <ImageView
                    android:id="@+id/iv_sex"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:layout_constraintTop_toTopOf="@+id/tvname"
                    app:layout_constraintBottom_toBottomOf="@+id/tvname"
                    android:paddingTop="13dp"
                    app:layout_constraintStart_toEndOf="@+id/tvname"
                    android:visibility="visible"
                    android:src="@drawable/ic_sex_male"
                    android:contentDescription="@string/sex" />
<!--                TODO-->

            </androidx.constraintlayout.widget.ConstraintLayout>


            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_marginTop="20dp"
                android:layout_height="1.0dip" />


            <TextView
                android:id="@+id/txt_my_data"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:text="@string/my_data"
                app:drawableLeftCompat="@drawable/mydata"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_profile"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:text="@string/profile"
                app:drawableLeftCompat="@drawable/profile"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_setting"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:text="@string/setting"
                app:drawableLeftCompat="@drawable/setting"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_feedback"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:text="@string/feedback"
                app:drawableLeftCompat="@drawable/feedback"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_update"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"
                android:text="@string/check_for_update"
                app:drawableLeftCompat="@drawable/update"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_height="1.0dip" />

            <TextView
                android:id="@+id/txt_about"
                style="@style/TxtTitle"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:background="@drawable/setting_item_selector"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawablePadding="10dp"

                android:text="@string/about"
                app:drawableLeftCompat="@drawable/info"
                app:drawableRightCompat="@drawable/right" />

            <View
                android:background="@color/black2"
                android:layout_width="fill_parent"
                android:layout_marginBottom="57dp"
                android:layout_height="1.0dip" />
        </LinearLayout>
</ScrollView>